fixed letter spacing on mobile

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -135,6 +135,10 @@ h5 {
         width: 80%;
     }
 
+    #tth {
+        letter-spacing: -5px;
+    }
+
 }
 
 #serving {
